--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,5 +1,5 @@
 html{height:100%;width:100%;display:table;font-size:16px;text-align:center;margin:0 auto;-webkit-tap-highlight-color:rgba(0,0,0,0)}
-body{background:rgba(0,0,0,0.2);font:Helvetica,Arial,sans-serif;color:#333333;height:100%;vertical-align:middle;display:table-cell}
+body{background:rgba(0,0,0,0.2);font:0.8em 'Microsoft Yahei',Arial;;color:#333333;height:100%;vertical-align:middle;display:table-cell}
 a{color:rgb(51,119,170)}
 a:link{color:rgb(102,102,153)}
 .input-group-addon{background:rgb(149,214,105);min-width:80px;}
