--- a/src/main/resources/static/css/paperMark.css
+++ b/src/main/resources/static/css/paperMark.css
@@ -1,21 +1,72 @@
-button#btn_next{margin-right:21px;}
 
-/* 表格布局 */
-.table{display:table;}
-.form{width:100%;min-height:500px;border:#BBB;color:rgb(34,34,34);margin-top:39px;}
-.content{width:94%;min-height:10px;margin:30px auto;}
-.content>h3{background:#e6e6e6;letter-spacing:0px;padding:5px 12px;}
-.question{width:90%;display:table;border:1px solid rgb(153,153,153);padding:5px 15px;letter-spacing:0px;margin:10px auto;}
-.question>h4{letter-spacing:0;font-weight:700;}
-.question>h4>span{letter-spacing:0;margin-left:22px;}
-.question>div{margin:8px 19px;}
-.question>span{display:table-row;float:right;}
-.question input[type='text']{letter-spacing:0px;text-align:center;}
-
-/* 自定义 */
-.alert #btn_cancle{margin-right:69px;}
-
-.mNli:nth-of-type(3)>a {
-    background: rgb(217, 219, 224);
-    border-left: 2px solid #000;
+/* 重写样式 */
+.datagrid-row-selected{background:rgb(237,236,233);color:rgb(0,0,0);}
+.pagination{
+        border-bottom: 1px solid rgb(149, 184, 231)
+}
+.student_paper{
+    padding:10px 15px;
+}
+.student_paper{
+    position: relative;
+    height: 100%;
+    overflow-x:hidden;
+    overflow-y: scroll;
+}
+.info{
+    height: 32px;width:90%;
+    margin:10px auto;
+    color:#333;
+    text-shadow: 1px 1px 3px #fff;
+}
+.info span:nth-of-type(1){
+    float: left;
+}
+.info span:nth-of-type(2){
+   float: right;
+}
+.btn_mark{
+    float: right;
+    background: rgba(222,12,0,0.8);
+    border-radius: 4px;
+    padding: 4px 8px;
+    box-shadow: none;
+    border:1px solid #666;
+}
+.question{
+    border:1px solid #666;
+    width: 95%;
+    margin:8px auto;
+    box-shadow: 1px 1px 3px #fff;
+    background: linear-gradient(45deg,#fff,#ddd);
+}
+.question_title{
+    width: 95%;
+    min-height: 28px;
+    margin:0px auto 5px;
+    border-bottom:1px dotted #666;
+    padding: 3px 8px;
+}
+.question_answer{
+    width: 95%;
+    min-height:150px;
+    margin:0px auto 5px;
+     padding: 3px 8px;
+}
+.back_to_top{
+    width:50px;
+    height: 50px;
+    border-radius: 50%;
+    background: #999;
+    transition: all 300ms linear;
+    position: absolute;
+    right: 40px;
+    bottom:40px;
+    text-align: center;
+}
+.back_to_top:hover{
+    background: #333;
+}
+.back_to_top>a{
+    color: #fff;
 }
