--- a/src/main/resources/static/css/select.css
+++ b/src/main/resources/static/css/select.css
@@ -1,51 +1,25 @@
-* {
-    line-height: 1.2;
-    margin: 0;
-}
-html,body {
-    color: rgb(90, 120, 90);
-    display: table;
-    font-family: sans-serif;
-    height: 100%;
-    text-align: center;
-    width: 100%;
-    background: rgba(0,0,0,0.2);
-}
+*{line-height:1.2;margin:0;}
 
-.wrap{
-    vertical-align: middle;
-    margin: 10em auto;
-    padding: 70px;
-    text-align: center;
-    border-radius: 5px;
-    width: 180px;
-    height: 60px;
-    background: rgb(255, 255, 255);
-    box-shadow: 0px 0px 14px rgba(0,0,0,.5);
-
-}
-select {
-    height: 24px;
-    display: inline;
-    float: right;
-    border: 1px solid rgba(136, 136, 136,.4);
-    box-shadow: 0px 0px 1px rgba(136,136,136,.5);
-}
-span {
-    text-shadow: 2px 1px rgb(255, 248, 220);
-    text-indent: -34px;
-    float: left;
-}
-button {
-    width: 100%;
-    font-size: 18px;
-    background:rgb(149,214,105);
-    border: none;
-    padding: 8px 18px;
-    margin-top: 30px;
-    box-shadow: 1px 1px 5px rgb(187, 184, 184);
-}
-button:hover {
-    cursor: pointer;
-    background: rgb(5, 162, 77);
-}
+/* global */
+html,button,input,select,textarea{color:#585858}
+html{color:#000;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;font-size:16px;}
+body,button,input,select,textarea{font:0.8em 'Microsoft Yahei',Arial;}
+a{text-decoration:none;color:#333;outline:0}
+a:hover{color:#004bc6;text-decoration:underline}
+.red-text,a.red-text{color:#F03}
+.dark-text,a.dark-text{color:#2a2a2a}
+.grey-text,a.grey-text{color:#999}
+.blue-text,a.blue-text{color:#0CC}
+.green-text,a.green-text{color:rgb(0,153,0);}
+b{margin-left:5px;margin-right:5px;}
+.log-panel{box-shadow:0px 0px 5px rgba(0,0,0,0.4);position:absolute;left:50%;top:50%;margin-top:-155px;margin-left:-185px;z-index:9;width:370px;height:172px;}
+.log-inner{width:370px;height:172px;position:absolute;z-index:10;line-height:1.8;}
+.log-test p{margin:8px 12px;}
+.paper-time{font-size:0.8em;}
+.log-panel{border:1px solid rgb(149,184,231);}
+.student-info{padding:10px 5px;background-color:rgb(224,236,255);background:-webkit-linear-gradient(top,rgb(239,245,255) 0,rgb(224,236,255) 100%);background:-moz-linear-gradient(top,#EFF5FF 0,#E0ECFF 100%);background:-o-linear-gradient(top,#EFF5FF 0,#E0ECFF 100%);background:linear-gradient(to bottom,rgb(239,245,255) 0,rgb(224,236,255) 100%);}
+.student-info a{margin-left:16px;}
+.paper-info{padding:10px 5px;}
+.hide{display:none;}
+input[type="button"]{float:right;margin:3px;}
+.ok-btn,.prev-btn{display:none;}
